# SigmoidLightning

./: README.md  data_module.py  model_module.py  train.py
.dvc/: config
conf/: data.yaml  model.yaml  sigmoid_data.yaml  train.yaml
lightning_logs/version_5/: metrics.csv
lightning_logs/version_5/checkpoints/: epoch=9-step=320.ckpt
my_project/: CMakeLists.txt
my_project/bindings/: bindings.cpp
my_project/src/: sigmoid.cpp  sigmoid.h
sigmoid_vector_C/: sigmoid_vector.cpp  sigmoid_vector.py
